// proto 文件版本
syntax = "proto3";
import "common.proto";
import "google/protobuf/empty.proto";
// 生成文件的包名
package user;
option go_package = "baby-fried-rice/internal/pkg/kit/rpc/pbservices/space";  // 声明生成的 go 文件所属的包
// 定义用户接口
service DaoSpace {
  // 空间动态添加
  rpc SpaceAddDao(ReqSpaceAddDao) returns (google.protobuf.Empty);
  // 空间动态删除
  rpc SpaceDeleteDao(ReqSpaceDeleteDao) returns (google.protobuf.Empty);
  // 空间动态查询
  rpc SpacesQueryDao(ReqSpacesQueryDao) returns (RspSpacesQueryDao);
  // 空间动态操作添加
  rpc SpaceOptAddDao(ReqSpaceOptAddDao) returns (google.protobuf.Empty);
  // 空间动态操作取消
  rpc SpaceOptCancelDao(ReqSpaceOptCancelDao) returns (google.protobuf.Empty);
  // 空间动态评论添加
  rpc SpaceCommentAddDao(ReqSpaceCommentAddDao) returns (google.protobuf.Empty);
  // 空间动态评论删除
  rpc SpaceCommentDeleteDao(ReqSpaceCommentDeleteDao) returns (google.protobuf.Empty);
}

// 空间动态添加
message ReqSpaceAddDao {
  // 操作人
  string origin = 1;
  // 动态内容
  string content = 2;
  // 访问类型
  int32 visitorType = 3;
}

message ReqSpaceDeleteDao {
  string id = 1;
  string origin = 2;
}

message ReqSpacesQueryDao {
  common.CommonSearchRequest commonSearchReq = 1;
}

message RspSpacesQueryDao {
  repeated SpaceQueryDao spaces = 1;
  int64 page = 2;
  int64 pageSize = 3;
}

// 空间动态信息
message SpaceQueryDao {
  // 空间动态id
  string id = 1;
  // 空间动态发布者
  string origin = 2;
  // 空间动态内容
  string content = 3;
  // 访问类型
  int32 visitorType = 4;
  // 创建时间
  string createTime = 5;
  // 空间动态其他信息
  SpaceOtherDao other = 6;
}

// 空间动态其他信息
message SpaceOtherDao {
  // 空间动态id
  string id = 1;
  // 访问量
  int64 visited = 2;
  // 点赞数
  int64 liked = 3;
  // 评论数
  int64 commented = 4;
  // 点赞列表，仅显示前30条
  repeated string likes = 5;
  // 评论列表
  repeated SpaceCommentDao comments = 6;
}

// 空间动态操作添加
message ReqSpaceOptAddDao {
  // 空间动态id
  string spaceId = 1;
  // 空间动态操作对象
  int32 operatorObject = 2;
  // 空间动态操作类型
  int32 operatorType = 3;
  // 操作者
  string origin = 4;
}

// 空间动态操作取消
message ReqSpaceOptCancelDao {
  // 空间动态id
  string spaceId = 1;
  // 空间动态操作id
  string operatorId = 2;
  // 操作者
  string origin = 3;
}

// 空间动态评论添加
message ReqSpaceCommentAddDao {
  // 空间id
  string spaceId = 1;
  // 上一级操作id
  string parentId = 2;
  // 评论内容
  string comment = 3;
  // 评论类型
  int32 commentType = 4;
  // 评论者
  string origin = 5;
}

// 空间动态评论信息
message SpaceCommentDao {
  // 空间评论操作ID
  string id = 1;
  // 空间id
  string spaceId = 2;
  // 评论内容
  string content = 3;
  // 评论类型
  int32 commentType = 4;
  // 评论者
  string origin = 5;
  // 评论时间
  string createTime = 7;
  // 回复列表
  repeated SpaceCommentDao replyList = 8;
}

// 空间动态评论删除
message ReqSpaceCommentDeleteDao {
  // 评论id
  string id = 1;
  // 空间id
  string spaceId = 2;
  // 操作者
  string origin = 3;
}